--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 150px;
 }
 
 .container-text {
-    font-size: 75px;
-    margin-top: 75px;
     word-wrap: break-word;
 }
 
@@ -41,18 +40,19 @@ body {
 
 .container-text h2 {
     margin-top: 30px;
-    font-size: 1.6em;
+    /* font-size: 20px; */
+    /* font-size: 1.6em; */
     color: var(--6);
 }
 
 .container-buttons {
     width: 100%;
     margin-top: 50px;
-    font-size: small;
+    /* font-size: small; */
 }
 
 .container-buttons button {
-    font-size: 30px;
+    /* font-size: 30px; */
     border-radius: 10px;
     padding: 4px 10px;
     margin: 10px 20px;
@@ -76,68 +76,75 @@ body {
 
 /* sm */
 @media (width <=640px) {
-
-    .container-text {
-        font-size: 48px;
+    .container-text h1 {
+        font-size: 70px;
     }
 
-    .container-buttons button {
+    .container-text h2 {
         font-size: 36px;
     }
-}
-
-
-/* sm */
-@media (width <=640px) {
-    .container-text {
-        font-size: 30px;
-    }
 
     .container-buttons button {
-        font-size: 24px;
+        font-size: 15px;
     }
 }
 
 /* md */
 @media (640px < width <=768px) {
-    .container-text {
-        font-size: 60px;
+    .container-text h1 {
+        font-size: 100px;
+    }
+
+    .container-text h2 {
+        font-size: 56px;
     }
 
     .container-buttons button {
-        font-size: 48px;
+        font-size: 20px;
     }
 }
 
 /* lg */
 @media (768px < width <=1010px) {
-    .container-text {
-        font-size: 72px;
+    .container-text h1 {
+        font-size: 120px;
+    }
+
+    .container-text h2 {
+        font-size: 76px;
     }
 
     .container-buttons button {
-        font-size: 60px;
+        font-size: 25px;
     }
 }
 
 /* xl */
 @media (1010px < width <=1400px) {
-    .container-text {
+    .container-text h1 {
+        font-size: 140px;
+    }
+
+    .container-text h2 {
         font-size: 96px;
     }
 
     .container-buttons button {
-        font-size: 72px;
+        font-size: 30px;
     }
 }
 
 /* 2xl */
 @media (width > 1400px) {
-    .container-text {
-        font-size: 128px;
+    .container-text h1 {
+        font-size: 160px;
+    }
+
+    .container-text h2 {
+        font-size: 116px;
     }
 
     .container-buttons button {
-        font-size: 96px;
+        font-size: 35px;
     }
 }
