--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,8 @@ body {
 }
 
 .main-container {
-    width: 100vw;
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: auto;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
